--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: 'Raleway', sans-serif;
+  background-image: url('https://meething.space/assets/images/background.png');
+  background-size: cover;
 }
 
 footer {
